--- a/DataAnalysis/DataAnalysisNotebook.Rmd
+++ b/DataAnalysis/DataAnalysisNotebook.Rmd
@@ -282,47 +282,48 @@ barplot(table(orange$degree),
 
 ### KPN
 ```{r}
-#meanAgeKPN = mean(KPN$age)
-#meanAgeKPN
-#varAgeKPN = sd(KPN$age)
-#varAgeKPN
+meanAgeKPN = mean(KPN$age)
+meanAgeKPN
+varAgeKPN = sd(KPN$age)
+varAgeKPN
 
-#barplot(table(KPN$taskCategory),
-        #main="Frequency of each category in KPN",
-        #xlab="Task Category",
-        #ylab="Count",
-        #col="blue")
+barplot(table(KPN$taskCategory),
+        main="Frequency of each category in KPN",
+        xlab="Task Category",
+        ylab="Count",
+        col="blue")
 
-#barplot(table(KPN$language),
-        #main="Frequency of each language interaction in KPN",
-        #xlab="Task Category",
-        #ylab="Count",
-        #col="blue")
+barplot(table(KPN$language),
+        main="Frequency of each language interaction in KPN",
+        xlab="Task Category",
+        ylab="Count",
+        col="blue")
 
-#barplot(table(KPN$platform),
-        #main="Frequency of each platform in KPN",
-        #xlab="Task Category",
-        #ylab="Count",
-        #col="blue")
+barplot(table(KPN$platform),
+        main="Frequency of each platform in KPN",
+        xlab="Task Category",
+        ylab="Count",
+        col="blue")
 
-#barplot(table(KPN$gender),
-        #main="Frequency of each gender in KPN",
-        #xlab="Task Category",
-        #ylab="Count",
-        #col=c("red", "blue"))
+barplot(table(KPN$gender),
+        main="Frequency of each gender in KPN",
+        xlab="Task Category",
+        ylab="Count",
+        col=c("red", "blue", "green"))
 
-#barplot(table(KPN$degree),
-        #main="Frequency of each degree in KPN",
-        #xlab="Task Category",
-        #ylab="Count",
-        #cex.names=0.55,
-        #col="blue")
+barplot(table(KPN$degree),
+        main="Frequency of each degree in KPN",
+        xlab="Task Category",
+        ylab="Count",
+        cex.names=0.55,
+        col="blue")
 ```
 
 ### Environment variables
 #### Age
 ```{r}
 ggplot(d, aes(x=chatbot, y=age)) + geom_point(colour="black", size=1) + stat_summary(fun=mean, geom="point", shape=1, size=2, colour="red", fill="red") + ggtitle("Age per chatbot provider")
+tab1(d$age, sort.group = "decreasing", cum.percent = FALSE)
 ```
 
 #### Degree
@@ -728,42 +729,42 @@ for(i in 1: 19){
 
 ### KPN
 ```{r}
-# for(i in 1: 19){
-#   yes <- table(KPN[[paste0("q", i)]])["1"]
-#   no <- table(KPN[[paste0("q", i)]])["2"]
-#   
-#   yes[is.na(yes)] <- 0
-#   no[is.na(no)] <- 0
-#   
-#   ynlabels <- c()
-#   ynval <- c()
-#   ynpos <- c()
-# 
-#   if(yes > 0 && no > 0) {
-#     ynlabels <- c("yes", "no")
-#     ynval <- c(yes, no)
-#     ynpos <- c(yes+1,no+1)
-#   }
-#   if ( yes > 0 && no == 0) {
-#     ynlabels <- c("yes")
-#     ynval <- c(yes)
-#     ynpos <- c(yes+1)
-#   }
-#   if (yes == 0 && no > 0) {
-#     ynlabels <- c("no")
-#     ynval <- c(no)
-#     ynpos <- c(no+1)
-#   }
-#   
-#   b <- barplot(table(KPN[[paste0("q", i)]]),
-#           main=questions1[i],
-#           ylab="Count",
-#           names.arg = ynlabels,
-#           col="blue",
-#           ylim = c(0,28))
-#   abline(v=c(1.3) , col="grey")
-#   text(b, y=ynpos, paste("n: ", ynval , sep=""), cex=1, col = "red")
-# }
+for(i in 1: 19){
+  yes <- table(KPN[[paste0("q", i)]])["1"]
+  no <- table(KPN[[paste0("q", i)]])["2"]
+
+  yes[is.na(yes)] <- 0
+  no[is.na(no)] <- 0
+
+  ynlabels <- c()
+  ynval <- c()
+  ynpos <- c()
+
+  if(yes > 0 && no > 0) {
+    ynlabels <- c("yes", "no")
+    ynval <- c(yes, no)
+    ynpos <- c(yes+1,no+1)
+  }
+  if ( yes > 0 && no == 0) {
+    ynlabels <- c("yes")
+    ynval <- c(yes)
+    ynpos <- c(yes+1)
+  }
+  if (yes == 0 && no > 0) {
+    ynlabels <- c("no")
+    ynval <- c(no)
+    ynpos <- c(no+1)
+  }
+
+  b <- barplot(table(KPN[[paste0("q", i)]]),
+          main=questions1[i],
+          ylab="Count",
+          names.arg = ynlabels,
+          col="blue",
+          ylim = c(0,28))
+  abline(v=c(1.3) , col="grey")
+  text(b, y=ynpos, paste("n: ", ynval , sep=""), cex=1, col = "red")
+}
 ```
 ## Importance Study
 ```{r}
@@ -825,14 +826,14 @@ for (i in 1: 3) {
 
   if(biggest == Q) {
     cat <- "Q"
-  } else if (biggest == M) {
-    cat <- "M"
   } else if (biggest == A) {
     cat <- "A"
-  } else if (biggest == I) {
-    cat <- "I"
   } else if (biggest == P) {
     cat <- "P"
+  } else if (biggest == M) {
+    cat <- "M"
+  } else if (biggest == I) {
+    cat <- "I"
   } else {
     cat <- "R"
   }
@@ -874,14 +875,14 @@ for (i in 1: 3) {
 
   if(biggest == Q) {
     cat <- "Q"
-  } else if (biggest == M) {
-    cat <- "M"
   } else if (biggest == A) {
     cat <- "A"
-  } else if (biggest == I) {
-    cat <- "I"
   } else if (biggest == P) {
     cat <- "P"
+  } else if (biggest == M) {
+    cat <- "M"
+  } else if (biggest == I) {
+    cat <- "I"
   } else {
     cat <- "R"
   }
@@ -923,14 +924,14 @@ for (i in 1: 3) {
 
   if(biggest == Q) {
     cat <- "Q"
-  } else if (biggest == M) {
-    cat <- "M"
   } else if (biggest == A) {
     cat <- "A"
-  } else if (biggest == I) {
-    cat <- "I"
   } else if (biggest == P) {
     cat <- "P"
+  } else if (biggest == M) {
+    cat <- "M"
+  } else if (biggest == I) {
+    cat <- "I"
   } else {
     cat <- "R"
   }
@@ -972,14 +973,14 @@ for (i in 1: 3) {
 
   if(biggest == Q) {
     cat <- "Q"
-  } else if (biggest == M) {
-    cat <- "M"
   } else if (biggest == A) {
     cat <- "A"
-  } else if (biggest == I) {
-    cat <- "I"
   } else if (biggest == P) {
     cat <- "P"
+  } else if (biggest == M) {
+    cat <- "M"
+  } else if (biggest == I) {
+    cat <- "I"
   } else {
     cat <- "R"
   }
@@ -994,6 +995,7 @@ satDf <- data.frame(matrix(ncol = 3, nrow = 0))
 x <- c("Attribute", "Satisfaction Coefficient", "Dissatisfaction Coefficient")
 colnames(satDf) <- x
 for (row in 1:nrow(df)) {
+  name <- df[row, "attribute"]
   Q <- strtoi(df[row, "Q"], base = 0L)
   M <- strtoi(df[row, "M"], base = 0L)
   A <- strtoi(df[row, "A"], base = 0L)
@@ -1003,7 +1005,7 @@ for (row in 1:nrow(df)) {
 
   satCoef <- round((A+P)/(A+P+M+I), digits = 2)
   dissatCoef <- round((P+M)/(A+P+M+I)*-1, digits = 2)
-  satDf[nrow(satDf) + 1,] = c(attributeName, satCoef, dissatCoef)
+  satDf[nrow(satDf) + 1,] = c(name, satCoef, dissatCoef)
 }
 satDf
 ```
@@ -1020,10 +1022,11 @@ ggplot(satDf, aes(x=`Satisfaction Coefficient`,
   geom_label(x = 1, y = 0.55, label = 'Performance', hjust = 1) +
   geom_label(x = 1, y = 0.45, label = 'Attractive', hjust = 1) +
   geom_point(col = 'deepskyblue3', size = 3) + 
-  geom_text(aes(label = seq(nrow(satDf))), size = 3, nudge_x = -0.015,
-            nudge_y = -0.02, check_overlap = TRUE) +
-  geom_text(aes(label = 11), size = 3, nudge_x = -0.015,
-                nudge_y = 0.02, data = satDf[11,]) +
+  geom_text(aes(label = seq(nrow(satDf))), size = 3, nudge_x = 0.02,
+            nudge_y = -0.015, check_overlap = TRUE) +
+  # if labels are overlapping, change positions with this
+  #geom_text(aes(label = 4), size = 3, nudge_x = -0.015,
+                #nudge_y = 0.02, data = satDf[4,]) +
   theme_light() +
   theme(panel.grid = element_blank()) +
   geom_hline(yintercept = 0.5) +
